src/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Manrope:wght@500;800&display=swap");
html {
  background-color: #f9faff;
  font-family: "Manrope", sans-serif;
}

.logo {
  font-family: "Comfortaa", cursive;
  color: #444444;
}

.me {
  font-weight: bolder;
  color: #444444;
}

.contact-btn {
  font-family: "Manrope", sans-serif;
}

.projects {
  font-family: "Manrope", sans-serif;
  font-weight: bolder;
}

.card-description {
  color: #a1a1a1;
}
.description {
  color: #bebebe;
}

.card-description {
  font-weight: lighter;
}

.btn {
  color: #005099;
  cursor: pointer;
}

.overlay {
  background-color: rgba(241, 241, 241, 0.725);
}

